# picycle

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  picycle.py  pyproject.toml  setup.py
picycle/: picycle.py
tests/: test_picycle.py
