[tool.poetry]
name = "picycle-cli"
version = "0.1.0"
description = ""
authors = ["Troy Squillaci <troysquillaci@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Click = "^7.1.2"
colorama = "^0.4.3"
gpxpy = "^1.4.2"
gpsd-py3 = "^0.3.0"
tabulate = "^0.8.7"
sense_hat = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
